--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -153,8 +153,8 @@
                 </a>
               </li>
             <% } %>
-            
-            
+
+
           </ul>
         </div>
       </div>
@@ -162,7 +162,7 @@
 
     <!-- Detail about Website -->
     <div class="introduce-website">
-      <img src="/assets/images/Introduce Website.jpg" width="100%">
+      <img src="/assets/images/Introduce Website.jpg" width="100%" height="800px">
       <div>
         <h1>Get early access, now</h1>
         <span>Be first for our free learning course, and get courses from $9.99.</span>
@@ -212,14 +212,14 @@
             <a href="/courses/<%= topTenViewCourses[i].id %>">
               <div class="courses-item-img">
                 <img src="<%= topTenViewCourses[i].img_path %>" alt="" width="100%">
-                
+
                 <div></div>
               </div>
               <div class="courses-item-title">
                 <%= topTenViewCourses[i].course_name %>
               </div>
               <div class="courses-item-lectures">
-                <%= topTenViewCourses[i].Instructor.User.first_name %> <%= topTenViewCourses[i].Instructor.User.last_name %>  
+                <%= topTenViewCourses[i].Instructor.User.first_name %> <%= topTenViewCourses[i].Instructor.User.last_name %>
               </div>
               <div class="courses-item-star">
                 <%= topTenViewCourses[i].rating %>
@@ -242,9 +242,9 @@
                   Bestseller
                 </div>
             <% } %>
-            </a> 
+            </a>
           </div>
-          
+
         <% } %>
         %>
       </div>
@@ -261,7 +261,7 @@
             <a href="/courses/<%= topNewCourses[i].id %>">
               <div class="courses-item-img">
                 <img src="<%= topNewCourses[i].img_path %>" alt="" width="100%">
-                
+
                 <div></div>
               </div>
               <div class="courses-item-title">
@@ -291,9 +291,9 @@
                     Bestseller
                   </div>
               <% } %>
-            </a> 
+            </a>
           </div>
-          
+
         <% } %>
         %>
       </div>
@@ -339,14 +339,14 @@
                     Bestseller
                   </div>
               <% } %>
-            </a> 
+            </a>
           </div>
-          
+
         <% } %>
         %>
       </div>
     </div>
-    
+
     <hr>
     <!-- Before footer -->
     <div class="container-fluid">
@@ -359,7 +359,7 @@
           <li><img src="https://s.udemycdn.com/partner-logos/surveymonkey-logo.svg" alt=""></li>
           <li><img src="https://s.udemycdn.com/partner-logos/booking-logo.svg" alt=""></li>
         </ul>
-      </div>  
+      </div>
     </div>
     <hr>
     <!-- Footer -->
@@ -388,7 +388,7 @@
         <ul class="col list-group">
           <li class="list-group"><a href="#">
             Terms</a></li>
-          <li class="list-group"><a href="#">           
+          <li class="list-group"><a href="#">
             Privacy policy and cookie policy</a></li>
           <li class="list-group"><a href="#">
             Sitemap</a></li>
