--- a/views/instructor/editCourse.ejs
+++ b/views/instructor/editCourse.ejs
@@ -277,6 +277,11 @@
 																name="lessonName">
 														</div>
 														<div class="form-group">
+															<label for="lessonIsFreeAL<%= i %>"> Is free?</label>
+															<input class='md-2' id="lessonIsFreeAL<%= i %>" type="checkbox" name="isFree"
+																   value="free">
+														</div>
+														<div class="form-group">
 															<label for="shortDescriptionAL<%= i %>">Short
 																description</label>
 															<textarea class="form-control" id="shortDescriptionAL<%= i %>" rows="3"
