--- a/views/user/category.ejs
+++ b/views/user/category.ejs
@@ -186,7 +186,7 @@
       </div>
       <div class="row">
         <div id="filterSection" data-course-id="<%= payload.categoryId  %>" class="col-3">
-          
+
           <select id="orderBy" data-order-by="<%= order_by %>" class="form-select w-100 mb-2">
             <% if(order_by === "order_review") { %>
               <option selected value="order_review">Order by rating</option>
@@ -198,7 +198,7 @@
           </select>
 
           <select id="sortBy" data-sort-by="<%= sort_by %>" class="form-select w-100 mb-2">
-            <% if(sort_by === "DECS") { %>
+            <% if(sort_by === "DESC") { %>
               <option selected value="DESC">Descending </option>
               <option value="ASC">Ascending</option>
             <% } else { %>
@@ -206,11 +206,11 @@
               <option selected value="ASC">Ascending</option>
             <% } %>
           </select>
-          
+
           <button id="filterBtn" class="btn btn-block btn-primary">Filter</button>
-          
+
         </div>
-        <div id="coursesSection"  class="col-9">    
+        <div id="coursesSection"  class="col-9">
           <% payload.courses.forEach((item) => { %>
             <a href="/courses/<%= item.id %>" class="d-block mb-3">
               <div class="row courses-item">
@@ -283,11 +283,11 @@
                 </ul>
             <% } %>
             </nav>
-          </div>      
+          </div>
         </div>
       </div>
     </div>
-    
+
 
   </div>
 
@@ -303,10 +303,10 @@
           <li><img src="https://s.udemycdn.com/partner-logos/surveymonkey-logo.svg" alt=""></li>
           <li><img src="https://s.udemycdn.com/partner-logos/booking-logo.svg" alt=""></li>
         </ul>
-      </div>  
+      </div>
     </div>
     <hr>
-  
+
   <!-- footer -->
   <div class="container-fluid footer">
     <div class="row">
@@ -333,7 +333,7 @@
       <ul class="col list-group">
         <li class="list-group"><a href="#">
           Terms</a></li>
-        <li class="list-group"><a href="#">           
+        <li class="list-group"><a href="#">
           Privacy policy and cookie policy</a></li>
         <li class="list-group"><a href="#">
           Sitemap</a></li>
@@ -361,7 +361,7 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  
+
   <script>
     $(document).ready(function(){
       let filterFlag = true;
@@ -390,13 +390,13 @@
         let page = $(this).data("page")
         let order_by = $("#orderBy").data("order-by")
         let sort_by = $("#sortBy").data("sort-by")
-        if(order_by === "order_review" && sort_by === "DESC") {
+        if(order_by === "order_price" && sort_by === "DESC") {
           window.location.href = `/category-courses/${category_id}?page=${page}`
         } else {
           window.location.href = `/category-courses/${category_id}?page=${page}&${order_by}=${sort_by}`
         }
       })
-      
+
     })
   </script>
 </body>
